kubernetes/production/base/tusd/virtualservice.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: tusd-virtualservice
spec:
  hosts:
    - "api.jkanda.fr"
